assets/theme.css
/* ... */
/*================ #Icons ================*/
svg.icon:not(.icon--full-color) .icon-error__symbol,
symbol.icon:not(.icon--full-color) .icon-error__symbol {
  fill: #ffffff;
}

/*================ Error Icons ================*/
/*================ Payment Icons ================*/
.payment-icons {
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  cursor: default;
}
@media only screen and (max-width: 749px) {
  .payment-icons {
    line-height: 40px;
  }
}
.payment-icons .icon {
  width: 38px;
  height: 24px;
  fill: inherit;
}

/*================ Social Icons ================*/
.social-icons .icon {
  width: 23px;
  height: 23px;
}
@media only screen and (min-width: 750px) {
  .social-icons .icon {
    width: 25px;
    height: 25px;
  }
}
.social-icons .icon.icon--wide {
  width: 40px;
}

/*================ Spinner Icon ================*/
.icon-spinner {
  -moz-animation: spin 500ms infinite linear;
  -o-animation: spin 500ms infinite linear;
  -webkit-animation: spin 500ms infinite linear;
  animation: spin 500ms infinite linear;
}

/*================ Error Icons ================*/
.icon-error {
  fill: #d20000;
  width: calc(calc(var(--font-size-base) * 1px) - 2px);
  height: calc(calc(var(--font-size-base) * 1px) - 2px);
  margin-top: 0.1em;
  flex-shrink: 0;
}

/*================ #Lists ================*/
ul,
ol {
  margin: 0;
  padding: 0;
}

ol {
  list-style: decimal;
}

/*================ #Rich Text Editor ================*/
.rte img {
  height: auto;
}

.rte table {
  table-layout: fixed;
}

.rte ul,
.rte ol {
  margin: 0 0 17.5px 35px;
}
.rte ul.list--inline,
.rte ol.list--inline {
  margin-left: 0;
}

.rte ul {
  list-style: disc outside;
}
.rte ul ul {
  list-style: circle outside;
}
.rte ul ul ul {
  list-style: square outside;
}

.rte a:not(.btn) {
  border-bottom: 1px solid currentColor;
  padding-bottom: 1px;
}

.text-center.rte ul,
.text-center.rte ol,
.text-center .rte ul,
.text-center .rte ol {
  margin-left: 0;
  list-style-position: inside;
}

.scrollable-wrapper {
  max-width: 100%;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

/*================ #Links and Buttons ================*/
a:not([disabled]):hover,
a:focus {
  color: var(--color-text-focus);
}

.password-powered-by a:not([disabled]):hover,
.password-powered-by a:focus {
  color: var(--color-text-focus);
  border-bottom: 1px solid var(--color-text-focus);
}

a[href^="tel"] {
  color: inherit;
}

/*================ Buttons ================*/
.btn,
.shopify-payment-button .shopify-payment-button__button--unbranded {
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  width: auto;
  text-decoration: none;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 2px;
  padding: 8px 15px;
  background-color: var(--color-btn-primary);
  color: var(--color-btn-primary-text);
  font-family: var(--font-stack-header);
  font-style: var(--font-style-header);
  font-weight: var(--font-weight-header);
  text-transform: uppercase;
  letter-spacing: 0.08em;
  white-space: normal;
  font-size: calc(
    ((var(--font-size-base) - 2) / (var(--font-size-base))) * 1em
  );
}
@media only screen and (min-width: 750px) {
  .btn,
  .shopify-payment-button .shopify-payment-button__button--unbranded {
    padding: 10px 18px;
  }
}
.btn:not([disabled]):hover,
.shopify-payment-button
  .shopify-payment-button__button--unbranded:not([disabled]):hover,
.btn:focus,
.shopify-payment-button .shopify-payment-button__button--unbranded:focus {
  color: var(--color-btn-primary-text);
  background-color: var(--color-btn-primary-focus);
}
.btn .icon-arrow-right,
.shopify-payment-button
  .shopify-payment-button__button--unbranded
  .icon-arrow-right,
.btn .icon-arrow-left,
.shopify-payment-button
  .shopify-payment-button__button--unbranded
  .icon-arrow-left {
  height: 9px;
}
.btn[disabled],
.shopify-payment-button .shopify-payment-button__button--unbranded[disabled],
.btn[aria-disabled],
.shopify-payment-button
  .shopify-payment-button__button--unbranded[aria-disabled] {
  cursor: default;
  opacity: 0.5;
}

.btn--secondary {
  background-color: transparent;
  color: var(--color-btn-primary);
  border-color: var(--color-btn-primary);
}
.btn--secondary:not([disabled]):hover,
.btn--secondary:focus {
  background-color: transparent;
  color: var(--color-btn-primary-focus);
  border-color: var(--color-btn-primary-focus);
}

.btn--secondary-accent {
  background-color: var(--color-body);
  color: var(--color-btn-primary);
  border-color: var(--color-btn-primary);
}
.btn--secondary-accent:not([disabled]):hover,
.btn--secondary-accent:focus {
  background-color: var(--color-body);
  color: var(--color-btn-primary-focus);
  border-color: var(--color-btn-primary-focus);
}

.btn--small {
  padding: 8px 10px;
  font-size: calc(((12) / (var(--font-size-base))) * 1em);
  line-height: 1;
}

.btn--tertiary {
  background-color: transparent;
  color: var(--color-small-button-text-border);
  border-color: var(--color-small-button-text-border);
}
.btn--tertiary:not([disabled]):hover,
.btn--tertiary:focus {
  background-color: transparent;
  color: var(--color-small-button-text-border-focus);
  border-color: var(--color-small-button-text-border-focus);
}

/*================ Button variations ================*/
@media only screen and (max-width: 749px) {
  .btn--small-wide {
    padding-left: 50px;
    padding-right: 50px;
  }
}

.btn--link {
  background-color: transparent;
  border: 0;
  margin: 0;
  color: var(--color-text);
  text-align: left;
}
.btn--link:not([disabled]):hover,
.btn--link:focus {
  color: var(--color-text-focus);
  background-color: transparent;
}
.btn--link .icon {
  vertical-align: middle;
}

.btn--narrow {
  padding-left: 15px;
  padding-right: 15px;
}
/* ... */

